Fix page size on mobile
- 100vh does not work properly on mobile, because it does not consider
the address bar of the browser which can pop in and out and change the
available screen space.

--- a/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
+++ b/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
@@ -1,6 +1,6 @@
 .wordPuzzleBoardContainer {
   display: flex;
-  height: 100vh;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
